<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="#006400"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email"
        android:id="@+id/emailInput"
        android:backgroundTint="#006400"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="20dp"
        />

    <!--EditText for user password-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password2"
        android:id="@+id/passwordInput"
        android:inputType="textPassword"
        android:backgroundTint="#006400"
        android:maxLines="1"
        android:padding="20dp"
        android:autofillHints="Password" />

    <!-- Login Button for Log In-->
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#006400"
        android:padding="10dp"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="#006400"
            android:textStyle="bold" />


    </LinearLayout>



</LinearLayout>