<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/activity_main.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<GridLayout
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="0dp"
    android:alignmentMode="alignMargins"
    android:columnOrderPreserved="false">

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clucking_acres"
        android:textSize="30sp"
        android:textColor="#006400"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_columnSpan="2"
        android:layout_marginBottom="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEggs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/eggs" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eggs_report"
                android:textColor="#006400"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardFeeds"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/feeds2"
                android:contentDescription="@string/feeds_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feeds"
                android:textColor="#006400"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardVaccinations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:src="@drawable/vaccination"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/vaccinations_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccinations"
                android:textColor="#006400"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardHelp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="450dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/help2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Help"
                android:textSize="20sp"
                android:textColor="#006400"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardMarketplace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/marketplace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Marketplace"
                android:textSize="20sp"
                android:textColor="#006400"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardReports"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:src="@drawable/reports"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/reports_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reports"
                android:textColor="#006400"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>
        </LinearLayout>



    </androidx.cardview.widget.CardView>


    </GridLayout>
    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"/>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_nav_menu" />
    </LinearLayout>

